# hexlet-vacancy-analysis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-bot-sender.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: celery.py  settings.py
app/services/sender_service/: apps.py  sender.py  tasks.py
app/telegram_bot/: apps.py  fsm.py  handlers.py  keyboards.py  models.py  statate_machine.py  state_machine.py  telegram_bot.py  tests.py  utils.py
app/telegram_bot/management/commands/: run_bot.py
app/telegram_bot/migrations/: 0001_initial.py
