[project]
name = "hexlet-vacancy-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "celery>=5.5.3",
    "django>=5.2.1",
    "django-celery-beat>=2.8.1",
    "dotenv>=0.9.9",
    "flower>=2.0.1",
    "psycopg2-binary>=2.9.10",
    "pytest-asyncio>=1.0.0",
    "pytest-django>=4.11.1",
    "python-telegram-bot>=22.1",
    "reddis>=1.0.1",
    "redis>=6.2.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "django-pytest>=0.2.0",
    "flake8>=7.2.0",
    "pytest>=8.4.0",
]
